[project]
name = "redpepper-agent"
description = "A state-based server management system (agent package)"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "exceptiongroup>=1.2.2",
    "pyyaml>=6.0.2",
    "redpepper-common",
    "trio>=0.26.2",
]

[tool.uv]
dev-dependencies = []

[project.scripts]
redpepper-agent = "redpepper.agent.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../redpepper/version.py"

[tool.hatch.build.targets.wheel]
packages = ["redpepper"]
