[project]
name = "redpepper-common"
description = "A state-based server management system (commmon package)"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "protobuf>=5.28.2",
    "trio>=0.26.2",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../redpepper/version.py"

[tool.hatch.build.targets.wheel]
packages = ["redpepper"]
