[project]
name = "redpepper-manager"
description = "A state-based server management system (manager package)"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "exceptiongroup>=1.2.2",
    "fastapi[standard]>=0.115.0",
    "hypercorn>=0.17.3",
    "itsdangerous>=2.2.0",
    "ordered-set>=4.1.0",
    "pydantic>=2.9.2",
    "pyotp>=2.9.0",
    "pyyaml>=6.0.2",
    "qrcode>=8.0",
    "redpepper-common",
    "trio>=0.26.2",
]

[tool.uv]
dev-dependencies = []

[project.scripts]
redpepper-manager = "redpepper.manager.entrypoint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../redpepper/version.py"

[tool.hatch.build.targets.wheel]
packages = ["redpepper"]
